# crux-toolkit

./: .gitignore  .svnignore  AUTHORS  CMakeLists.txt  COPYRIGHT  ChangeLog  Dockerfile  INSTALL  Makefile.am  NEWS  README  bootstrap  configure  configure.ac  crux.sln  docker-compose.yml  ghcrDockerfile  license.txt  linux_i686.toolchain.cmake  make-version-header.cmake  release-notes.html
doc/user/: .svnignore  CMakeLists.txt  Makefile-webpage  Makefile.am  assign-confidence.html  barista-tutorial.html  barista-xml-format.html  barista.html  bullseye.html  bullseye_standalone_to_crux.html  calibrate-scores.html  calibrate-scores2.html  cascade-search.html  comet.html  comet.params  compute-q-values.html  contributors.html  create-docs.cmake  create-docs.html  crux-analyze-matches.html  crux-create-index.html  crux-faq.html  crux-generate-peptides.html  crux-get-ms2-spectrum.html  crux-predict-peptide-ions.html  crux-print-processed-spectra.html  crux-score-peptides-spectrum.html  crux-search-for-matches.html  crux-search-for-xlinks.html  crux-sequest-search.html  crux-tutorial.md  crux-xlink-search.html  crux.css  crux.html  customize-tutorial.html  default.params  deploy-to-web.sh  download.html  download.php  examples-tutorial.html  (+60 more)
ext/: CMakeLists.txt  build-comet.cmake  build-pwiz.cmake  build_pwiz.cmake  create_links.sh  download-pwiz-tarball.sh  download_gflags.cmake  download_pbuffers.cmake  download_pwiz.cmake  patch-comet.cmake  post-install-pwiz.cmake  post_install_pwiz.cmake
src/: .cproject  CMakeLists.txt  Makefile.am  Makefile.mzidentml  crux-main.cpp  crux-main.h  default.params  match_objects.h  objects.h  parameter.cpp  parameter.h  write-default-params.sh
src/CruxGui/: CruxGui.mf  Makefile  README
src/app/: AssignConfidenceApplication.cpp  AssignConfidenceApplication.h  CalcResidueScoreCount.cpp  CascadeSearchApplication.cpp  CascadeSearchApplication.h  CometApplication.cpp  CometApplication.h  CometIndexApplication.cpp  CometIndexApplication.h  ComputeQValues.cpp  ComputeQValues.h  ComputeQValuesLegacy.h  CreateDocs.cpp  CreateDocs.h  CruxApplication.cpp  CruxApplication.h  CruxApplicationList.cpp  CruxApplicationList.h  CruxLFQApplication.cpp  CruxLFQApplication.h  CruxQuantApplication.cpp  CruxQuantApplication.h  DIAmeterApplication.cpp  DIAmeterApplication.h  ExtractColumns.cpp  ExtractColumns.h  ExtractRows.cpp  ExtractRows.h  GenerateDecoys.cpp  GenerateDecoys.h  GeneratePeptides.cpp  GeneratePeptides.h  GetMs2Spectrum.cpp  GetMs2Spectrum.h  KojakApplication.cpp  KojakApplication.h  LibraApplication.cpp  LibraApplication.h  LocalizeModification.cpp  LocalizeModification.h  (+49 more)
src/c/: .svnignore  AbstractMatch.cpp  AbstractMatch.h  Alphabet.cpp  CMakeLists.txt  CarpStreamBuf.cpp  CarpStreamBuf.h  CometApplication.cpp  CometApplication.h  ComputeQValues.cpp  ComputeQValues.h  ComputeQValuesLegacy.h  CreateIndex.cpp  CreateIndex.h  CruxApplication.cpp  CruxApplication.h  CruxApplicationList.cpp  CruxApplicationList.h  CruxConfig.h.in  Database.cpp  Database.h  DatabasePeptideIterator.cpp  DatabasePeptideIterator.h  DatabaseProteinIterator.cpp  DatabaseProteinIterator.h  DatabaseSortedPeptideIterator.cpp  DatabaseSortedPeptideIterator.h  DelimitedFile.cpp  DelimitedFile.h  DelimitedFileReader.cpp  DelimitedFileReader.h  DelimitedFileWriter.cpp  DelimitedFileWriter.h  Doxyfile  ExtractColumns.cpp  ExtractColumns.h  ExtractRows.cpp  FilteredSpectrumChargeIterator.cpp  FilteredSpectrumChargeIterator.h  GenerateDecoys.cpp  (+327 more)
src/io/: DIAmeterCVSelector.cpp  DIAmeterCVSelector.h  DIAmeterFeatureScaler.cpp  DIAmeterFeatureScaler.h  DIAmeterFileReader.cpp  DIAmeterFileReader.h  DIAmeterPSMFilter.cpp  DIAmeterPSMFilter.h  DelimitedFile.cpp  DelimitedFile.h  DelimitedFileReader.cpp  DelimitedFileReader.h  DelimitedFileWriter.cpp  DelimitedFileWriter.h  HTMLWriter.h  LineFileReader.cpp  LineFileReader.h  MSToolkitSpectrumCollection.cpp  MSToolkitSpectrumCollection.h  MSToolkitSpectrumConverter.cpp  MSToolkitSpectrumConverter.h  MatchCollectionParser.cpp  MatchCollectionParser.h  MatchColumns.cpp  MatchColumns.h  MatchFileReader.cpp  MatchFileReader.h  MatchFileWriter.cpp  MatchFileWriter.h  MzIdentMLReader.cpp  MzIdentMLReader.h  MzIdentMLWriter.cpp  MzIdentMLWriter.h  OutputFiles.cpp  OutputFiles.h  PMCDelimitedFileWriter.cpp  PMCDelimitedFileWriter.h  PMCPepXMLWriter.cpp  PMCPepXMLWriter.h  PMCSQTWriter.cpp  (+29 more)
src/model/: AbstractMatch.cpp  Database.cpp  Database.h  DatabasePeptideIterator.cpp  DatabasePeptideIterator.h  FilteredSpectrumChargeIterator.cpp  FilteredSpectrumChargeIterator.h  GeneratePeptidesIterator.cpp  GeneratePeptidesIterator.h  Ion.cpp  Ion.h  IonConstraint.cpp  IonConstraint.h  IonFilteredIterator.cpp  IonSeries.cpp  IonSeries.h  Match.cpp  Match.h  MatchCollection.cpp  MatchCollection.h  MatchCollectionIterator.cpp  MatchIterator.cpp  MatchIterator.h  Modification.cpp  Modification.h  ModifiedPeptidesIterator.cpp  ModifiedPeptidesIterator.h  Peak.cpp  Peak.h  Peptide.cpp  Peptide.h  PeptideConstraint.cpp  PeptideConstraint.h  PeptideIterator.h  PeptideMatch.cpp  PeptideSrc.cpp  PeptideSrc.h  PostProcessProtein.cpp  PostProcessProtein.h  Protein.cpp  (+15 more)
src/python/: Makefile.am  compare_score.py  dta2ms2.py  parse_sqt_file.py  sample.fa  sample_spectra_from_ms2.py
src/util/: Alphabet.cpp  Alphabet.h  AminoAcidUtil.cpp  AminoAcidUtil.h  ArgParser.cpp  ArgParser.h  AsyncPost.mm  CacheableMass.cpp  CacheableMass.h  CarpStreamBuf.cpp  FileUtils.cpp  FileUtils.h  GlobalParams.cpp  GlobalParams.h  MathUtil.cpp  MathUtil.h  ParamClasses.cpp  Params.cpp  Params.h  ParamsAnalysisOptions.cpp  ParamsBullseyeOptions.cpp  ParamsCometOptions.cpp  ParamsDIAmeterOptions.cpp  ParamsGeneralOptions.cpp  StringUtils.cpp  StringUtils.h  WinCrux.cpp  WinCrux.h  crux-file-utils.cpp  crux-file-utils.h  crux-utils.cpp  crux-utils.h  hash.cpp  hash.h  linked_list.cpp  linked_list.h  mass.cpp  mass.h  modifications.cpp  modifications.h  (+9 more)
test/google-test/: CMakeLists.txt  GTestExtProject.cmake.in  UnitTest_GoogleAnalytics.cpp
test/unit-tests/: CMakeLists.txt  Makefile  (+45 more)
(+3289 files in other folders)
